Removed original header section as it was too complex, replaced it with image carousel; added new media; replaced embedded video with new one

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,13 @@ body {
     text-transform: uppercase;
 }
 
+.row {
+    margin: 0;
+}
+
 /* --------------------------------- Nav Bar */
 
 .navbar {
-    padding: 8px;
     width: 100%;
 }
 
@@ -55,77 +58,126 @@ body {
     border-color: #fff;
 }
 
-/* --------------------------------- Header */
+/* --------------------------------- Landing */
 
-.header-img {
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') no-repeat center center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+#carouselHeader {
+    margin-top: 71px;
 }
 
-.album-cover {
-    max-height: 500px;
-    top: 50%;
-    transform: translateY(50%);
+.carousel-item img {
+    padding: 0;
 }
 
-.buy-album {
-    display: block;
-    margin: auto;
-    top: 100%;
-    transform: translateY(100%);
+#carousel-img2::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0.4);
 }
+
+.carousel-caption {
+    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
+}
+
+/*.album-cover {*/
+
+/*    max-height: 500px;*/
+
+/*    top: 50%;*/
+
+/*    transform: translateY(50%);*/
+
+/*}*/
+
+/*.buy-album {*/
+
+/*    display: block;*/
+
+/*    margin: auto;*/
+
+/*    top: 100%;*/
+
+/*    transform: translateY(100%);*/
+
+/*}*/
 
 /* --------------------------------- Band Name */
 
-.perspective-text {
-    color: #fff;
-    font-family: 'logo-font', Arial;
-    font-size: 60px;
-    font-weight: 400;
-    margin-top: 40%;
-}
+/*.perspective-text {*/
 
-.perspective-line {
-    height: 80px;
-    overflow: hidden;
-    position: relative;
-}
+/*    color: #fff;*/
 
-.perspective-line p {
-    margin: 0;
-    height: 80px;
-    line-height: 80px;
-    transition: all 0.5s ease-in-out;
-}
+/*    font-family: 'logo-font', Arial;*/
 
-.perspective-line:nth-child(odd) {
-    transform: skew(60deg, -30deg) scaleY(0.667);
-}
+/*    font-size: 60px;*/
 
-.perspective-line:nth-child(even) {
-    transform: skew(0deg, -30deg) scaleY(1.333);
-}
+/*    font-weight: 400;*/
 
-.perspective-text:hover p {
-    transform: translate(0, -80px);
-}
+/*    margin-top: 40%;*/
 
-.perspective-line:nth-child(1) {
-    left: 29px;
-}
+/*}*/
 
-.perspective-line:nth-child(2) {
-    left: 58px;
-}
+/*.perspective-line {*/
 
-.perspective-line:nth-child(3) {
-    left: 87px;
-}
+/*    height: 80px;*/
+
+/*    overflow: hidden;*/
+
+/*    position: relative;*/
+
+/*}*/
+
+/*.perspective-line p {*/
+
+/*    margin: 0;*/
+
+/*    height: 80px;*/
+
+/*    line-height: 80px;*/
+
+/*    transition: all 0.5s ease-in-out;*/
+
+/*}*/
+
+/*.perspective-line:nth-child(odd) {*/
+
+/*    transform: skew(60deg, -30deg) scaleY(0.667);*/
+
+/*}*/
+
+/*.perspective-line:nth-child(even) {*/
+
+/*    transform: skew(0deg, -30deg) scaleY(1.333);*/
+
+/*}*/
+
+/*.perspective-text:hover p {*/
+
+/*    transform: translate(0, -80px);*/
+
+/*}*/
+
+/*.perspective-line:nth-child(1) {*/
+
+/*    left: 29px;*/
+
+/*}*/
+
+/*.perspective-line:nth-child(2) {*/
+
+/*    left: 58px;*/
+
+/*}*/
+
+/*.perspective-line:nth-child(3) {*/
+
+/*    left: 87px;*/
+
+/*}*/
 
 /* --------------------------------- Section Containers */
 
@@ -179,6 +231,10 @@ body {
 .tour-content-container,
 .social-content-container {
     padding: 60px 40px 60px 40px;
+}
+
+.landing-content-container {
+    padding: 0;
 }
 
 /* --------------------------------- About */
@@ -286,3 +342,10 @@ body {
     padding-bottom: 20px;
 }
 
+/* --------------------------------- Media Queries */
+
+@media only screen and (min-width: 576px) {
+    #carouselHeader {
+        margin-top: 92px;
+    }
+}
