--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,12 +224,32 @@ body {
     padding-bottom: 40px;
 }
 
+.container-wrapper--news {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/music-background.jpg') no-repeat center center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    padding-bottom: 40px;
+}
+
+.container-wrapper--contact {
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/music-background.jpg') no-repeat center center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    padding-bottom: 40px;
+}
+
 .about-content-container,
 .music-content-container,
 .merch-content-container,
 .video-content-container,
 .tour-content-container,
-.social-content-container {
+.social-content-container,
+.news-content-container,
+.contact-content-container {
     padding: 60px 40px 60px 40px;
 }
 
@@ -249,6 +269,53 @@ body {
 .bio-content {
     text-align: left;
     padding: 20px;
+}
+
+.profile-pics-container {
+    margin-top: 15%;
+}
+
+.profile-pics {
+    border-radius: 50%;
+    max-height: 200px;
+    margin-top: 30px;
+}
+
+.profile-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #3B2B46;
+    z-index: 2;
+    margin: auto;
+    margin-top: 30px;
+}
+
+.profile-container {
+    position: relative;
+}
+
+.profile-container:hover .profile-overlay {
+    opacity: 1;
+}
+
+.hover-text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 /* --------------------------------- Music */
@@ -333,6 +400,22 @@ body {
 
 .tour-table {
     width: 60%;
+    margin: auto;
+}
+
+/* --------------------------------- News */
+
+.news-heading {
+    text-transform: uppercase;
+    text-align: center;
+    margin: auto;
+}
+
+/* --------------------------------- Contact */
+
+.contact-heading {
+    text-transform: uppercase;
+    text-align: center;
     margin: auto;
 }
 
