--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,6 +367,26 @@ body {
     padding-bottom: 40px;
 }
 
+.card-col {
+    margin-top: 40px;
+}
+
+.card {
+    margin: auto;
+    height: 100%;
+    /*position: relative;*/
+    color: #000;
+    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
+}
+
+.visit-btn {
+    margin-top: 40px;
+}
+
+/*.card-btn {*/
+/*    position: absolute;*/
+/*    bottom: 0;*/
+/*}*/
 
 /* --------------------------------- Video */
 
@@ -432,3 +452,19 @@ body {
         margin-top: 92px;
     }
 }
+
+@media only screen and (min-width: 768px) {
+    .card-row-2 {
+        margin-top: 40px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .card-row-1 .card {
+        margin-top: 0;
+    }
+    .card-col {
+        margin-top: 0;
+    }
+}
+
