Commented out testing code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,10 +507,10 @@ form label {
 
 /* --------------------------------- Media Queries */
 
-* {
-    background: #000 !important;
-    color: #0f0 !important;
-    outline: solid #f00 1px !important;
-}
+/** {*/
+/*    background: #000 !important;*/
+/*    color: #0f0 !important;*/
+/*    outline: solid #f00 1px !important;*/
+/*}*/
 
 
