--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,13 +88,15 @@ h2 span {
 /* --------------------------------- Hover Effects */
 
 .hvr-underline-from-center:before {
-    background: #343a40;
+    background: #000;
 }
 
 /* --------------------------------- Nav Bar */
 
 .navbar {
     width: 100vw;
+    background-color: #000;
+    border-bottom: 1px solid #fff;
 }
 
 .navbar-brand {
@@ -123,6 +125,11 @@ h2 span {
     font-size: 22px;
     font-weight: 300;
     letter-spacing: 2px;
+    font-family: 'logo-font', 'Roboto', Arial, sans-serif;
+}
+
+.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+    color: #fff;
 }
 
 .navbar-toggler {
@@ -161,6 +168,33 @@ h2 span {
     width: 40px;
     height: 40px;
 }
+
+/*.carousel.carousel-fade .carousel-caption {*/
+/*	-webkit-transition: opacity 0.5s ease-in-out;*/
+/*	-moz-transition: opacity 0.5s ease-in-out;*/
+/*	-ms-transition: opacity 0.5s ease-in-out;*/
+/*	-o-transition: opacity 0.5s ease-in-out;*/
+/*	transition: opacity 0.5s ease-in-out;*/
+/*	opacity:0;*/
+/*}*/
+
+/*.carousel.carousel-fade .active.carousel-caption {*/
+/*	opacity:1;*/
+/*}*/
+
+/*.carousel.carousel-fade .active.left,*/
+/*.carousel.carousel-fade .active.right {*/
+/*	left: 0;*/
+/*	z-index: 2;*/
+/*	opacity: 0;*/
+/*	filter: alpha(opacity=0);*/
+/*}*/
+
+/*.carousel.carousel-fade .next,*/
+/*.carousel.carousel-fade .prev {*/
+/*	left: 0;*/
+/*	z-index: 1;*/
+/*}*/
 
 /* --------------------------------- Section Containers */
 
@@ -426,6 +460,10 @@ form label {
 }
 
 /* --------------------------------- Footer */
+
+footer {
+    background-color: #000;
+}
 
 .footer-heading {
     padding-bottom: 20px;
