--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,6 @@ h2 span {
 
 .carousel-caption {
     font-family: 'logo-font', 'Roboto', Arial, sans-serif;
-    padding-bottom: 50px;
 }
 
 .carousel-control-next-icon, 
@@ -169,32 +168,9 @@ h2 span {
     height: 40px;
 }
 
-/*.carousel.carousel-fade .carousel-caption {*/
-/*	-webkit-transition: opacity 0.5s ease-in-out;*/
-/*	-moz-transition: opacity 0.5s ease-in-out;*/
-/*	-ms-transition: opacity 0.5s ease-in-out;*/
-/*	-o-transition: opacity 0.5s ease-in-out;*/
-/*	transition: opacity 0.5s ease-in-out;*/
-/*	opacity:0;*/
-/*}*/
-
-/*.carousel.carousel-fade .active.carousel-caption {*/
-/*	opacity:1;*/
-/*}*/
-
-/*.carousel.carousel-fade .active.left,*/
-/*.carousel.carousel-fade .active.right {*/
-/*	left: 0;*/
-/*	z-index: 2;*/
-/*	opacity: 0;*/
-/*	filter: alpha(opacity=0);*/
-/*}*/
-
-/*.carousel.carousel-fade .next,*/
-/*.carousel.carousel-fade .prev {*/
-/*	left: 0;*/
-/*	z-index: 1;*/
-/*}*/
+#carousel-img-3 .carousel-caption {
+    padding-bottom: 0px;
+}
 
 /* --------------------------------- Section Containers */
 
@@ -251,15 +227,15 @@ h2 span {
     width: 100%;
 }
 
-.container-wrapper--news {
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/music-background.jpg') no-repeat center center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    padding-bottom: 40px;
-    width: 100%;
-}
+/*.container-wrapper--news {*/
+/*    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/music-background.jpg') no-repeat center center;*/
+/*    background-size: cover;*/
+/*    -webkit-background-size: cover;*/
+/*    -moz-background-size: cover;*/
+/*    -o-background-size: cover;*/
+/*    padding-bottom: 40px;*/
+/*    width: 100%;*/
+/*}*/
 
 .container-wrapper--contact {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/oriordan.jpeg') no-repeat center center;
@@ -427,6 +403,7 @@ h2 span {
 .tour-table {
     width: 60%;
     margin: auto;
+    max-width: 100vw;
 }
 
 /* --------------------------------- News */
@@ -516,8 +493,8 @@ footer {
     .card-row-2 {
         margin-top: 40px;
     }
-    #carouselHeader {
-        
+    .carousel-caption {
+        padding-bottom: 50px;
     }
 }
 
