--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,14 +20,14 @@ body {
     margin: 0;
 }
 
-h2 {
+.section-heading {
     position: relative;
     text-shadow: 1px 1px 2px black;
     font-family: 'logo-font', 'Roboto', Arial, sans-serif;
-    font-size: 50px;
+    font-size: 40px;
 }
 
-h2 span {
+.section-heading span {
     position: absolute;
     top: -130px;
 }
@@ -46,7 +46,9 @@ h2 span {
     border-color: #633324;
 }
 
-.btn-dark:not(:disabled):not(.disabled).active, .btn-dark:not(:disabled):not(.disabled):active, .show>.btn-dark.dropdown-toggle {
+.btn-dark:not(:disabled):not(.disabled).active,
+.btn-dark:not(:disabled):not(.disabled):active,
+.show>.btn-dark.dropdown-toggle {
     background-color: #633324;
     border-color: #633324;
 }
@@ -128,7 +130,8 @@ h2 span {
     font-family: 'logo-font', 'Roboto', Arial, sans-serif;
 }
 
-.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
     color: #fff;
 }
 
@@ -162,7 +165,7 @@ h2 span {
     font-family: 'logo-font', 'Roboto', Arial, sans-serif;
 }
 
-.carousel-control-next-icon, 
+.carousel-control-next-icon,
 .carousel-control-prev-icon {
     width: 40px;
     height: 40px;
@@ -227,16 +230,6 @@ h2 span {
     width: 100%;
 }
 
-/*.container-wrapper--news {*/
-/*    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/music-background.jpg') no-repeat center center;*/
-/*    background-size: cover;*/
-/*    -webkit-background-size: cover;*/
-/*    -moz-background-size: cover;*/
-/*    -o-background-size: cover;*/
-/*    padding-bottom: 40px;*/
-/*    width: 100%;*/
-/*}*/
-
 .container-wrapper--contact {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../images/oriordan.jpeg') no-repeat center center;
     background-size: cover;
@@ -255,7 +248,7 @@ h2 span {
 .social-content-container,
 .news-content-container,
 .contact-content-container {
-    padding: 60px 40px 60px 40px;
+    padding: 30px 40px 30px 40px;
 }
 
 .landing-content-container {
@@ -355,8 +348,11 @@ h2 span {
 }
 
 /*.card-row-1,*/
+
 /*.card-row-2 {*/
+
 /*    margin: auto;*/
+
 /*}*/
 
 .card {
@@ -364,6 +360,7 @@ h2 span {
     /*height: 100%;*/
     color: #000;
     font-family: 'logo-font', 'Roboto', Arial, sans-serif;
+    width: 18rem;
 }
 
 .visit-btn {
@@ -431,7 +428,7 @@ form label {
     text-shadow: 1px 1px 2px black;
 }
 
-.duration-select, 
+.duration-select,
 .venue-size {
     padding: 0;
 }
@@ -468,6 +465,16 @@ footer {
 /* --------------------------------- Media Queries */
 
 @media only screen and (min-width: 576px) {
+    .about-content-container,
+    .music-content-container,
+    .merch-content-container,
+    .video-content-container,
+    .tour-content-container,
+    .social-content-container,
+    .news-content-container,
+    .contact-content-container {
+        padding: 60px 40px 60px 40px;
+    }
     #carouselHeader {
         margin-top: 92px;
     }
@@ -518,14 +525,19 @@ footer {
     .hvr-underline-from-center:before {
         background: #964B35;
     }
+    .section-heading {
+        font-size: 50px;
+    }
 }
 
-/* --------------------------------- Media Queries */
+/* --------------------------------- Testing Code */
 
 /** {*/
+
 /*    background: #000 !important;*/
+
 /*    color: #0f0 !important;*/
+
 /*    outline: solid #f00 1px !important;*/
+
 /*}*/
-
-
