--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,10 +187,6 @@ body {
 
 /* --------------------------------- Section Containers */
 
-.container-wrapper--landing {
-    width: 100vw;
-}
-
 .container-wrapper--about {
     background: linear-gradient(rgba(99, 51, 36, 0.5), rgba(99, 51, 36, 0.5)), url('../images/about-background.jpg') no-repeat top right;
     background-attachment: fixed;
@@ -407,9 +403,8 @@ body {
 /* --------------------------------- Tour */
 
 .tour-table {
-    width: 60%;
+    font-size: 0.7rem;
     margin: auto;
-    max-width: 100vw;
 }
 
 /* --------------------------------- Contact */
@@ -466,6 +461,12 @@ footer {
 
 /* --------------------------------- Media Queries */
 
+@media only screen and (min-width: 321px) {
+    .tour-table {
+            font-size: 0.9rem;
+    }
+}
+
 @media only screen and (min-width: 576px) {
     .about-content-container,
     .music-content-container,
@@ -495,6 +496,9 @@ footer {
     }
     .footer-col-1 {
         margin-top: 0;
+    }
+    .tour-table {
+            font-size: 1rem;
     }
 }
 
