Fixed newsletter signup form responsiveness issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,9 +460,13 @@ footer {
     padding: 0;
 }
 
+.email-box {
+    margin: auto;
+}
+
 .newsletter-signup {
     max-width: 60vw;
-    margin: auto
+    margin: auto;
 }
 
 /* --------------------------------- Media Queries */
